package business.models;

import org.json.JSONObject;

public interface Processable {

    JSONObject process();

}
